/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package estree.declarations;

import estree.statements.Statement;

/**
 *
 * @author Sergey
 */
public class Declaration extends Statement {
    
}
