/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package estree.expressions;

import estree.Node;
import estree.statements.loops.ForStatementInit;

/**
 *
 * @author Sergey
 */
public class Expression extends Node implements ForStatementInit, AssignmentLeftInterface {
    
}
