/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package estree.statements;

import java.util.Collection;

/**
 *
 * @author Sergey
 */
public class BlockStatement extends Statement {
    
    private Collection<Statement> body;
    
}
